--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
       <h1>Where I'm From</h1>
       <p>Columbus, Ohio</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Running, lifting weights and kickboxing</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>CEO of Neurolink</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>San Diego, CA</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>Have a good coding background before branching off into Cyber Security</p>
     </section>
 
     <footer id="footer">
